@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          - include our full config data in target dist's metadata
 
 0.008     2013-11-30 17:26:03Z
           - re-release to fix compile test
